k8s/qa/ingress-tls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-votingapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-qa
  rules:
  - host: brief8-qa.simplon-lion.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: votingapp
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
    - hosts:
      - brief8-qa.simplon-lion.space
      secretName: secret-tls # < cert-manager will store the created certificate in this secret.
